tests/baselines/reference/unusedMultipleParameters1InMethodDeclaration.errors.txt
tests/cases/compiler/unusedMultipleParameters1InMethodDeclaration.ts(3,20): error TS6134: Parameter 'person' has never been used.
tests/cases/compiler/unusedMultipleParameters1InMethodDeclaration.ts(4,13): error TS6133: Variable 'unused' has never been used.


==== tests/cases/compiler/unusedMultipleParameters1InMethodDeclaration.ts (2 errors) ====
    
    class Dummy {
        public greeter(person: string, person2: string) {
                       ~~~~~~~~~~~~~~
!!! error TS6134: Parameter 'person' has never been used.
            var unused = 20;
                ~~~~~~
!!! error TS6133: Variable 'unused' has never been used.
            person2 = "dummy value";
        }
    }